--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "jspdf": "^3.0.1",
+        "jspdf-autotable": "^5.0.2",
         "vue": "^3.5.13",
         "vue-router": "^4.5.0",
         "vuetify": "^3.8.0"
